[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai2-olmo-core"
dynamic = ["version"]
readme = "README.md"
description = "Core training module for the Open Language Model (OLMo)"
authors = [
    { name = "Allen Institute for Artificial Intelligence", email = "olmo@allenai.org" }
]
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
    "numpy<2.0",
    "torch>=2.4,<=2.6.0.dev20241009",
    "cached-path",
    "requests",
    "packaging",
    "rich",
    "omegaconf",
    "safetensors",
    "importlib_resources",
    "ai2-olmo-eval==0.2.0",
]

[project.urls]
Homepage = "https://github.com/allenai/OLMo-core"
Documentation = "https://olmo-core.readthedocs.io/en/latest/"
Changelog = "https://github.com/allenai/OLMo-core/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy>=1.0,<1.4",
    "black>=23.1,<24.0",
    "isort>=5.12,<5.13",
    "pytest",
    "pytest-memray",
    "pytest-sphinx",
    "pytest-xdist",
    "twine>=1.11.0",
    "setuptools",
    "wheel",
    "build",
    "boto3",
    "google-cloud-storage",
    "Sphinx>=6.0,<7.0.2",
    "furo==2023.5.20",
    "myst-parser>=1.0,<2.1",
    "sphinx-copybutton==0.5.2",
    "sphinx-autobuild==2021.3.14",
    "sphinx-autodoc-typehints==1.23.3",
]
beaker = [
    "beaker-py>=1.32.0",
    "GitPython>=3.0,<4.0",
]
wandb = [
    "wandb",
]
comet = [
    "comet_ml",
]
all = [
    "ai2-olmo-core[dev,beaker,wandb,comet]",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
olmo_core = ["py.typed", "*.txt"]

[tool.setuptools.dynamic]
version = { attr = "olmo_core.version.VERSION" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["olmo_core*"]
exclude = []

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
(
      __pycache__
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
    | scratch/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ruff]
line-length = 115

[tool.ruff.lint]
ignore = ["F403", "F405", "E501"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".venv",
    "venv",
    ".mypy_cache",
    "__pycache__",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "doc",
    "pretrain_data",
    "inference",
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]

[tool.pyright]
reportPrivateImportUsage = false

[tool.mypy]
ignore_missing_imports = true
no_site_packages = true
check_untyped_defs = true
no_namespace_packages = true
disable_error_code = "has-type"

[[tool.mypy.overrides]]
module = "tests.*"
strict_optional = false

[tool.pytest.ini_options]
testpaths = "tests/"
python_classes = [
  "Test*",
  "*Test",
]
log_format = "%(asctime)s - %(levelname)s - %(name)s - %(message)s"
log_level = "DEBUG"
log_cli = false
log_cli_level = "DEBUG"
markers = [
    "gpu",
]
filterwarnings = [
    'ignore::FutureWarning:huggingface_hub\.file_download',
    'ignore::DeprecationWarning:pkg_resources',
    'ignore::DeprecationWarning:google\.rpc',
    'ignore::FutureWarning:torch\.distributed\.checkpoint\.default_planner',
]
