[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai2-olmo-core"
dynamic = ["version"]
readme = "README.md"
description = "Core training module for the Open Language Model (OLMo)"
authors = [
    { name = "Allen Institute for Artificial Intelligence", email = "olmo@allenai.org" },
]
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "numpy",
    "torch>=2.6.0",
    "cached-path>=1.7.2",
    "requests",
    "packaging",
    "rich",
    "omegaconf",
    "safetensors",
    "importlib_resources",
    "bettermap"
]

[project.urls]
Homepage = "https://github.com/allenai/OLMo-core"
Documentation = "https://olmo-core.readthedocs.io/en/latest/"
Changelog = "https://github.com/allenai/OLMo-core/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "black>=23.1,<24.0",
    "boto3",
    "build",
    "furo==2024.8.6",
    "google-cloud-storage",
    "isort>=5.12,<5.14",
    "mypy>=1.0,<1.4",
    "myst-parser>=1.0,<3.0",
    "pytest",
    "pytest-memray",
    "pytest-sphinx",
    "pytest-xdist",
    "ruff",
    "setuptools",
    "Sphinx>=6.0,<=8.1.3",
    "sphinx-autobuild",
    "sphinx-autodoc-typehints==1.23.3",
    "sphinx-copybutton",
    "sphinx-inline-tabs",
    "twine>=1.11.0",
    "wheel",
]
beaker = ["beaker-py>=1.37.0,<2.0", "GitPython>=3.0,<4.0", "google-cloud-compute"]
comet = ["comet_ml"]
eval = ["ai2-olmo-eval==0.8.5"]
torchao = ["torchao"]
transformers = ["transformers"]
wandb = ["wandb"]
all = ["ai2-olmo-core[dev,beaker,comet,eval,torchao,transformers,wandb]"]


[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
olmo_core = ["py.typed", "*.txt"]

[tool.setuptools.dynamic]
version = { attr = "olmo_core.version.VERSION" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["olmo_core*"]
exclude = []

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
(
      __pycache__
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
    | scratch/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["F403", "F405", "E501"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".venv",
    "venv",
    ".mypy_cache",
    "__pycache__",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "doc",
    "pretrain_data",
    "inference",
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]

[tool.pyright]
reportPrivateImportUsage = false

[tool.ty.rules]
possibly-unbound-attribute = "ignore"
possibly-unbound-import = "ignore"

[tool.mypy]
ignore_missing_imports = true
no_site_packages = true
check_untyped_defs = true
namespace_packages = false
disable_error_code = "has-type"

[[tool.mypy.overrides]]
module = "tests.*"
strict_optional = false

[tool.pytest.ini_options]
testpaths = "src/test/"
python_classes = ["Test*", "*Test"]
log_format = "%(asctime)s - %(levelname)s - %(name)s - %(message)s"
log_level = "DEBUG"
log_cli = false
log_cli_level = "DEBUG"
markers = ["gpu"]
filterwarnings = [
    'ignore::FutureWarning:huggingface_hub\.file_download',
    'ignore::DeprecationWarning:pkg_resources',
    'ignore::DeprecationWarning:google\.rpc',
    'ignore::FutureWarning:torch\.distributed\.checkpoint\.default_planner',
    'ignore::UserWarning:torch\.distributed\.checkpoint\.state_dict_saver',
    'ignore::UserWarning:torch\.distributed\.checkpoint\.state_dict_loader',
]
